# OtpVault

./: .gitignore  LICENSE  OtpVault_0.1.0_x64_en-US.wixpdb  OtpVault_0.1.0_x86_en-US.wixpdb  PROJECT_MAP.md  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: privacy-policy.html  terms-of-service.html
landing/: gen-og.ps1  index.html  vercel.json
landing/api/: package.json  vault.ts
landing/app/: index.html  manifest.webmanifest  sw.js
otpvault-pwa/: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
otpvault-pwa/android/: gradle.properties  variables.gradle
otpvault-pwa/scripts/: encrypt-connstr.mjs
otpvault-pwa/src/: App.tsx  index.css  (+2 more)
scripts/: bmp2png.mjs  brand-msi.ps1  check-bmp.mjs  check-bmp.py  debug-bmp.mjs  dlltool-x86.bat  generate-icons.mjs  generate-installer-bmp.mjs  generate-installer-bmp.ps1  generate-installer-bmp.py  generate-mobile-icons.mjs  linker-x64.bat  linker-x86.bat  make-ico.py  patch-installer.ps1  preview-bmp.mjs  test-gdi.ps1  test-sharp.mjs  test-text.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  qr_scanner.rs  tray.rs
src-tauri/src/commands/: accounts.rs  auth.rs  backup.rs  email_auth.rs  mod.rs  neon.rs
src-tauri/src/crypto/: keychain.rs  mod.rs  vault.rs
src-tauri/src/logging/: logger.rs
src-tauri/src/totp/: generator.rs
(+51 files in other folders)
