[package]
name = "otpvault"
version = "0.1.6"
description = "OtpVault - Secure 2FA Authenticator"
authors = ["EuroMoscow Developments"]
edition = "2021"

[lib]
name = "otpvault_lib"
crate-type = ["staticlib", "rlib"]

[profile.release]
lto = false
strip = false
codegen-units = 16

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
totp-rs = { version = "5", features = ["otpauth", "serde_support", "gen_secret"] }
image = "0.25"
rqrr = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
data-encoding = "2"
log = "0.4"
simple-logging = "2"
url = "2"
thiserror = "2"
